Code generated by TDD agent