@@ -14,6 +14,7 @@ import com.exadel.frs.core.trainservice.validation.ImageExtensionValidator;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.stereotype.Service;
 
@@ -43,7 +44,7 @@ public class EmbeddingsRecognizeProcessServiceImpl extends FaceRecognizeProcessS
         List<EmbeddingRecognitionProcessResult> results =
                 Arrays.stream(embeddings)
                       .map(embedding -> processEmbedding(predictionCount, apiKey, embedding))
-                      .toList();
+                      .collect(Collectors.toList());
 
         return new EmbeddingsRecognitionProcessResponse(results);
     }
@@ -52,7 +53,7 @@ public class EmbeddingsRecognizeProcessServiceImpl extends FaceRecognizeProcessS
         List<Pair<Double, String>> predictions = classifierPredictor.predict(apiKey, embedding, predictionCount);
         List<EmbeddingSimilarityResult> similarities = predictions.stream()
                                                                   .map(this::processPrediction)
-                                                                  .toList();
+                                                                  .collect(Collectors.toList());
 
         return new EmbeddingRecognitionProcessResult(embedding, similarities);
     }
